feat(search): Implement the phone number search entity